--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "test",
+  "name": "msnodesqlv8-built-darwin",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
+  "description": "",
   "dependencies": {
     "msnodesqlv8": "^4.2.1"
   }
